k8s/helloworld-dotnetcore-cluster-agent.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-dotnetcore
  name: helloworld-dotnetcore
  namespace: helloworld
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: helloworld-dotnetcore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appdAppName: HelloWorld
    instrument: appd-auto-dotnetcore
  name: helloworld-dotnetcore
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-dotnetcore
  template:
    metadata:
      labels:
        app: helloworld-dotnetcore
        appdAppName: HelloWorld
        instrument: appd-auto-dotnetcore
    spec:
      containers:
      - name: helloworld-dotnetcore
        image: ghcr.io/alex-y-kozlov-sandbox/helloworld-k8s/helloworld-dotnetcore:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: helloworld-dotnetcore
  namespace: helloworld
spec:
  rules:
  - host: helloworld-dotnetcore.20.42.24.68.nip.io
    http:
      paths:
      - backend:
          serviceName: helloworld-dotnetcore
          servicePort: 8080
        path: /
