k8s/helloworld-dotnetcore-init-container.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-dotnetcore-init-container
  name: helloworld-dotnetcore-init-container
  namespace: helloworld
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: helloworld-dotnetcore-init-container
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-dotnetcore-init-container
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-dotnetcore-init-container
  template:
    metadata:
      labels:
        app: helloworld-dotnetcore-init-container
    spec:
      containers:
      - name: helloworld-dotnetcore-init-container
        image: ghcr.io/alex-y-kozlov-sandbox/helloworld-k8s/helloworld-dotnetcore:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: appd-agent-repo
          mountPath: /opt/appdynamics
        - name: appd-config-dotnetcore-json
          subPath: AppDynamicsConfig.json 
          mountPath: /opt/appdynamics/AppDynamicsConfig.json
      volumes:
        - name: appd-config-dotnetcore-json
          configMap:
            name: appd-config-dotnetcore-json
        - name: appd-agent-repo
          emptyDir: {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: helloworld-dotnetcore-init-container
  namespace: helloworld
spec:
  rules:
  - host: helloworld-dotnetcore-init-container.20.42.24.68.nip.io
    http:
      paths:
      - backend:
          serviceName: helloworld-dotnetcore-init-container
          servicePort: 8080
        path: /
