k8s/helloworld-node-cluster-agen.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-node
  name: helloworld-node
  namespace: helloworld
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: helloworld-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appdAppName: HelloWorld
    instrument: appd-auto-node
  name: helloworld-node
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-node
  template:
    metadata:
      labels:
        app: helloworld-node
        appdAppName: HelloWorld
        instrument: appd-auto-node
    spec:
      containers:
      - env:
        - name: APPDYNAMICS_NETVIZ_AGENT_PORT
          value: "3892"
        - name: APPDYNAMICS_NETVIZ_AGENT_HOST
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        image: ghcr.io/alex-y-kozlov-sandbox/helloworld-k8s/helloworld-node:1.0.0
        imagePullPolicy: IfNotPresent
        name: helloworld-node
        ports:
        - containerPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: helloworld-node
  namespace: helloworld
spec:
  rules:
  - host: helloworld-node.20.42.24.68.nip.io
    http:
      paths:
      - backend:
          serviceName: helloworld-node
          servicePort: 3000
        path: /
