k8s/helloworld-node-init-container.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-node-init-container
  name: helloworld-node-init-container
  namespace: helloworld
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: helloworld-node-init-container
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-node-init-container
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-node-init-container
  template:
    metadata:
      labels:
        app: helloworld-node-init-container
    spec:
      containers:
      - name: helloworld-node-init-container
        image: ghcr.io/alex-y-kozlov-sandbox/helloworld-k8s/helloworld-node:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /opt/appdynamics
          name: appd-agent-repo        
      volumes:
        - name: appd-agent-repo
          emptyDir: {}  
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: helloworld-node-init-container
  namespace: helloworld
spec:
  rules:
  - host: helloworld-node-init-container.20.42.24.68.nip.io
    http:
      paths:
      - backend:
          serviceName: helloworld-node-init-container
          servicePort: 3000
        path: /
